Fix issue with background image stutter on tablet

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -683,7 +683,7 @@ input, .stat-button
     .content
     {
         position: relative;
-        background: rgba(220, 120, 220, .9);
+        background: rgba(20, 220, 220, .9);
         background-position: center;
         background-image: none;
         width: 70vw;
@@ -899,3 +899,30 @@ input, .stat-button
         transform: scaleY(0.33);
     }
 }
+
+@media (max-device-aspect-ratio: 3/4) 
+{
+    .parallax-section
+    {
+        height: calc(100vw * 1.333 - 9%);
+    }
+}
+
+  @media (max-device-aspect-ratio: 2/3) {
+    .parallax-section
+    {
+        height: calc(100vw * 1.5 - 9%);
+    }
+  }
+  @media (max-device-aspect-ratio: 10/16) {
+    .parallax-section
+    {
+        height: calc(100vw * 1.6 - 9%);
+    }
+  }
+  @media (max-device-aspect-ratio: 9/16) {
+    .parallax-section
+    {
+        height: calc(100vw * 1.778 - 9%);
+    }
+  }
